--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,33 +1,46 @@
-@import 'part/var.css';
-
+@import "part/var.css";
 
 .wrap-header {
     position: relative;
     min-height: 85vh;
 }
 .wrap-header::before {
-    content: '';
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
     height: 100%;
     width: 100%;
-    background-image: linear-gradient(180deg, var(--text) 50%, var(--background));
+    background-image: linear-gradient(
+        180deg,
+        var(--text) 50%,
+        var(--background)
+    );
+    /* background-color: var(--text); */
     opacity: 0.1;
     border-radius: 8px;
     z-index: -1;
 }
 
-
 /* carousel */
 .carousel-header {
     width: 100%;
-    overflow:hidden;
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
+    /* border: 2px solid red; */
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-size: 0px;
 }
 .carousel-wrapper {
+    font-size: 0px;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    border: 2px solid transparent;
     width: 50%;
     display: flex;
     align-items: center;
@@ -41,20 +54,13 @@
     height: 300px;
     transition: all 1s ease;
     border-radius: 16px;
+    text-wrap: no-wrap;
 }
-.carousel-active{
+.carousel-active {
     width: 100%;
     height: 400px;
     transition: all 1s ease;
 }
-
-.carousel-image:first-child {
-    border: 2px solid red;
-}
-.carousel-image:last-child {
-    border: 2px solid blue;
-}
-
 
 /* category-card */
 .category-icon {
@@ -83,12 +89,91 @@
     position: relative;
 }
 
+/* about */
+.wrap-about {
+    position: relative;
+    text-align: center;
+    padding-block: 50px;
+    box-sizing: border-box;
+}
+.wrap-about::before,
+.wrap-about::after {
+    content: "";
+    position: absolute;
+    width: 1px;
+    top: 30%;
+    width: 100px;
+    height: 100px;
+    background-color: var(--violet);
+    z-index: -1;
+    border-radius: 50%;
+    box-shadow: 0px 0px 100px 100px var(--violet);
+    opacity: 0.3;
+}
+.wrap-about::before {
+    left: 15%;
+}
+.wrap-about::after {
+    right: 15%;
+}
 
+.wrap-about .bg::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: var(--text);
+    /* background-image: linear-gradient(180deg, var(--background), var(--text) 45%, var(--background)); */
+    opacity: 0.1;
+    border-radius: 8px;
+    z-index: -1;
+}
 
-
-
-
-
+/* produck */
+.wrap-product {
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    justify-items: end;
+    align-items: end;
+    padding-bottom: 20px;
+}
+.product-slider, .product-slider-2 {
+    display: flex;
+    gap: 10px;
+    padding-left: 10px;
+    width: calc(260px * 18);
+}
+.product-slider {
+    animation: scroll 40s linear infinite;
+}
+.product-slider-2 {
+    animation: scroll 40s linear infinite reverse;
+}
+@keyframes scroll {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(calc(-260px * 9));
+    }
+}
+.wrap-product .card {
+    border: none;
+    border-radius: 8px;
+    height: 250px;
+    min-width: 250px;
+    box-shadow: 2px 2px 4px -1px rgb(48, 194, 253, 0.5);
+}
+.wrap-product .product-img {
+    height: 70%;
+    width: 100%;
+    border-radius: 5px;
+    background-position: center;
+    background-size: cover;
+}
 
 @media screen and (max-width: 768px) {
     .wrap-header {
