--- a/public/css/part/var.css
+++ b/public/css/part/var.css
@@ -1,8 +1,9 @@
 :root {
-    --background: #F5F9FC;
-    --card: #FFFFFF;
-    --text: #1E1E1E;
-    --violet: #9747FF;
+    --background: #f5f9fc;
+    --card: #ffffff;
+    --card-hover: #f7f7f7;
+    --text: #1e1e1e;
+    --violet: #9747ff;
     --violet-hover: #7822e9;
-    --aqua: #30C2FD40;
+    --aqua: #30c2fd;
 }
