--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,6 +81,9 @@ body {
     background-color: var(--second);
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
+label {
+    font-weight: bold;
+}
 
 .animation-start {
     z-index: 100;
