--- a/public/css/part/var.css
+++ b/public/css/part/var.css
@@ -5,5 +5,6 @@
     --text: #1e1e1e;
     --violet: #9747ff;
     --violet-hover: #7822e9;
-    --aqua: #30c2fd;
+    --aqua: rgb(48, 194, 253);
+    --aqua-opacity: #C4EBFC;
 }
