--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,6 +8,10 @@ h5 {
     font-size: 16px !important;
     margin: 0;
 }
+.h5 {
+    font-size: 16px !important;
+    margin: 0;
+}
 h6 {
     font-size: 13px !important;
     margin: 0;
