--- a/public/css/part/var.css
+++ b/public/css/part/var.css
@@ -5,6 +5,5 @@
     --text: #1e1e1e;
     --violet: #9747ff;
     --violet-hover: #7822e9;
-    --aqua: rgb(48, 194, 253);
-    --aqua-opacity: #C4EBFC;
+    --aqua: #30c2fd;
 }
